--- a/pages/home.html
+++ b/pages/home.html
@@ -4,12 +4,12 @@ layout: default
 permalink: /
 ---
 <h3>
-	<a href=" /about" class="about-button">What is a WebView?</a>
+	<a href="{{ site.url }}/about" class="about-button">What is a WebView?</a>
 </h3>
 <div class="homepage">
 	<div class="block">
 
-		<h1 class="list-title"><a href="/features/">Latest features</a></h1>
+		<h1 class="list-title"><a href="{{ site.url }}/features/">Latest features</a></h1>
 		<ol class="list">
 			{% assign latest-features = site.features | concat: site.generated_features | sort:"last_test_date" | reverse %}
 			{% for feature in latest-features limit:5 %}
@@ -26,7 +26,7 @@ permalink: /
 			</li>
 			{% endfor %}
 		</ol>
-		<a href="/features/" class="button">View all features</a>
+		<a href="{{ site.url }}/features/" class="button">View all features</a>
 	</div>
 	<div class="block">
 		<h1 class="list-title"><a href="/news/">Latest news</a></h1>
@@ -40,7 +40,7 @@ permalink: /
 		<!-- <a href="/news/" class="button">View all news</a> -->
 	</div>
 	<div class="block">
-		<h1 class="list-title"><a href="/scoreboard/">Documentation progress</a></h1>
+		<h1 class="list-title"><a href="{{ site.url }}/scoreboard/">Documentation progress</a></h1>
 		{% include client-scores.html limit=5 %}
 		<!-- <a href="/scoreboard/" class="button">View the scoreboard</a> -->
 	</div>
